bootstrap and onChange and onClick

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "concurrently": "^4.1.0"
   },
   "dependencies": {
-    "body-parser": "^1.18.3"
+    "body-parser": "^1.18.3",
+    "bootstrap": "^4.3.1"
   }
 }
