--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "concurrently": "^4.1.0"
   },
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "bootstrap": "^4.3.1"
+    "body-parser": "^1.18.3"
   }
 }
